kubernetes/infrastructure/controllers/cloudflare-tunnel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-tunnel
  labels:
    pod-security.kubernetes.io/enforce: restricted
    kubernetes.io/metadata.name: cloudflare-tunnel
